[package]
name = "blossom"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
blake3 = "1.5.4"
clap = { version = "4.5.16", features = ["derive"] }
flate2 = "1.0.33"
indicatif = "0.17.8"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["gzip", "brotli", "zstd"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_with = "3.9.0"
spdx = "0.10.6"
tar = "0.4.41"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"] }
toml_edit = { version = "0.22.20", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.2", features = ["serde"] }
