[package]
name = "blossom"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
base16ct = { version = "0.2.0", features = ["std"] }
blake3 = "1.5.4"
bzip2 = "0.4.4"
camino = "1.1.9"
clap = { version = "4.5.19", features = ["derive"] }
flate2 = "1.0.33"
indicatif = "0.17.8"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["gzip", "brotli", "zstd"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_with = "3.10.0"
sha2 = "0.10.8"
spdx = "0.10.6"
tar = "0.4.42"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
toml_edit = { version = "0.22.22", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.2", features = ["serde"] }
xz2 = "0.1.7"
